--- a/src/app/components/asuka-picture/asuka-picture.component.html
+++ b/src/app/components/asuka-picture/asuka-picture.component.html
@@ -1,1 +1,14 @@
-<p>{{message}}</p>
+<div class="card">
+    <img class="card__picture" src="../assets/pictures/asuka-picture0.png" alt="Asuka pictures">
+    <article class="content">
+        <p class="content__title">Asuka picture title</p>
+        <div class="metrics">
+            <div class="metrics__content">
+                <span class="icon icon--like"></span><span class="count">0</span>
+            </div>
+            <div class="metrics__content">
+                <span class="icon icon--heart"></span><span class="count">0</span>
+            </div>
+        </div>
+    </article>
+</div>
