add logical with models and components, show some random metrics

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,1 @@
-<main class="main-container">
-    <h1 class="title">Asuka pictures</h1>
-    <app-asuka-picture class="card"></app-asuka-picture>
-    <app-asuka-picture class="card"></app-asuka-picture>
-    <app-asuka-picture class="card"></app-asuka-picture>
-    <app-asuka-picture class="card"></app-asuka-picture>
-</main>
+<app-data-asuka-pictures></app-data-asuka-pictures>
